# PipelineMQ

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  cmaki.js  cmaki_emulator.sh  cmaki_identifier.cmake  cmaki_identifier.sh  install.cmd  install.sh  npm-do  package.json  postinstall.cmd  postinstall.sh  preinstall  preinstall.cmd  preinstall.sh  receiver.cpp  sync_publish.cpp  test.sh
tests/: CMakeLists.txt  cmaki_identifier.cpp  predef.cpp  sync_publish.cpp  sync_subscribe.cpp
