project(cmaki_identifier_project CXX)
cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 14)
include_directories(boostorg_predef/include)
enable_testing()
MESSAGE("CMAKE_CURRENT_SOURCE_DIR = ${CMAKE_CURRENT_SOURCE_DIR}")
MESSAGE("CMAKE_CURRENT_BINARY_DIR = ${CMAKE_CURRENT_BINARY_DIR}")
MESSAGE("CMAKI_INSTALL = $ENV{CMAKI_INSTALL}")
add_subdirectory(tests)

